[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molprep"
version = "0.1.0"
description = "A Python package for streamlined preparation of protein structures and drug-like molecules for virtual screening workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Abhishek Tiwari", email = "pypi@abhishek-tiwari.com"}
]
keywords = ["molecular modeling", "drug discovery", "virtual screening", "protein preparation", "cheminformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/abhishektiwari/molprep"
Documentation = "https://molprep.readthedocs.io"
Repository = "https://github.com/abhishektiwari/molprep"
Issues = "https://github.com/abhishektiwari/molprep/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["molprep*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=molprep --cov-report=html --cov-report=term-missing"
